--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,7 @@
-pip install matplotlib
+cufflinks==0.17.3
+matplotlib==3.5.2
+numpy==1.23.0
+pandas==1.4.3
+seaborn==0.11.2
+streamlit==1.10.0
+yfinance==0.1.72
